<resources>
    <!-- Translatable -->
    <string name="welcome_to_conference_app_enter_conference_id_or_click_on_qr_code_icon_to_scan_conferences_qr_code">Welcome to conference app, enter conference ID or click on QR code icon to scan conferences QR code.</string>
    <string name="conferences_app">Conferences app</string>
    <string name="qr_code_image">QR code image</string>
    <string name="forward_icon">Forward icon</string>

    <string name="about">About</string>
    <string name="schedule">Schedule</string>
    <string name="exhibitors">Exhibitors</string>
    <string name="favourite_events">Favourite events</string>
    <string name="floor_blueprint">Floor blueprint</string>
    <string name="share">Share</string>
    <string name="email_developers">Email developers</string>
    <string name="communication">Communication</string>
    <string name="conferences">Conferences</string>
    <string name="add_a_new_conference">Add a new conference</string>
    <string name="my_conferences">My conferences</string>
    <string name="name_surname">Name Surname</string>
    <string name="you_are_currently_not_logged_in">You are currently not logged in</string>
    <string name="log_in">Log in</string>

    <string name="alias_key">ALIAS_KEY</string>
    <string name="you_have_inputted_invalid_conference_id_or_canceled_qr_scanning">You have inputted invalid conference ID or canceled QR scanning.</string>
    <string name="conference_with_entered_id_does_not_exist_lease_try_again">Conference with entered ID does not exist. Please try again.</string>
    <string name="scan_conference_id">Scan conference ID</string>

    <string name="unable_to_get_initial_conference_id_please_restart_the_app_or_contact_developers">Unable to get initial conference ID, please restart the app or contact developers.</string>
    <string name="unable_to_get_conference_data_please_restart_the_app_or_contact_developers">Unable to get conference data, please restart the app or contact developers.</string>

    <string name="three_letter_january">Jan</string>
    <string name="three_letter_monday">Mon</string>


    <string name="empty" />
    <!-- Application strings -->
    <string name="app_name">@string/conferences_app</string>

    <!-- Crypto engine -->
    <string name="crypto_engine_alias_key">@string/alias_key</string>

    <!-- QR code utils -->
    <string name="scan_conference_id_prompt">@string/scan_conference_id</string>

    <!-- Welcome fragment -->
    <string name="fragment_add_conference_info_text">@string/welcome_to_conference_app_enter_conference_id_or_click_on_qr_code_icon_to_scan_conferences_qr_code</string>
    <string name="conference_does_not_exist_error">@string/conference_with_entered_id_does_not_exist_lease_try_again</string>
    <string name="invalid_conference_id_error">@string/you_have_inputted_invalid_conference_id_or_canceled_qr_scanning</string>

    <!-- Home activity -->
    <!-- Navigation drawer -->
    <string name="nav_item_about">@string/about</string>
    <string name="nav_item_schedule">@string/schedule</string>
    <string name="nav_item_exhibitors">@string/exhibitors</string>
    <string name="nav_item_favourite_events">@string/favourite_events</string>
    <string name="nav_item_floor_blueprint">@string/floor_blueprint</string>
    <string name="nav_item_share">@string/share</string>
    <string name="nav_item_email_developers">@string/email_developers</string>
    <string name="nav_item_add_new_conference">@string/add_a_new_conference</string>
    <string name="nav_item_my_conferences">@string/my_conferences</string>

    <string name="activity_home_drawer_header_user_name">@string/empty</string>
    <string name="activity_home_navigation_drawer_header_user_not_logged_in">@string/you_are_currently_not_logged_in</string>
    <string name="activity_home_navigation_drawer_header_button_text">@string/log_in</string>

    <string name="there_was_a_problem_with_getting_initial_conference_please_set_initial_conference_again">There was a problem with getting initial conference. Please set initial conference again.</string>

    <!-- User authentication -->
    <string name="google_sign_in_scope_youtube">https://www.googleapis.com/auth/youtube.readonly</string>

    <!-- About fragment -->
    <string name="get_initial_conference_id_error">@string/unable_to_get_initial_conference_id_please_restart_the_app_or_contact_developers</string>
    <string name="get_conference_data_error">@string/unable_to_get_conference_data_please_restart_the_app_or_contact_developers</string>

    <!-- Schedule fragment -->

    <string name="fragment_schedule_date_number_placeholder">31</string>
    <string name="fragment_schedule_three_letter_month_placeholder">@string/three_letter_january</string>
    <string name="fragment_schedule_three_letter_weekday_placeholder">@string/three_letter_monday</string>
    <string name="button_left">Button left</string>
    <string name="button_right">Button right</string>
    <string name="_09_30h">09:30h</string>
    <string name="event_name">Event name</string>
    <string name="_10_00_12_00">10:00 – 12:00</string>
    <string name="hall_1">Hall 1</string>
    <string name="event_type_image_view">Event type image view</string>
    <string name="event_location_image_view">Event location image view</string>
    <string name="event_time_image_view">Event time image view</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>


</resources>
